objects/CMPL123CME__EMDR__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123CME__Complaint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Complaint</label>
        <referenceTo>CMPL123CME__Complaint__c</referenceTo>
        <relationshipLabel>EMDR</relationshipLabel>
        <relationshipName>EMDR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Consolidate_As_VMSR__c</fullName>
        <description>To make an Initial EMDR available for VMSR creation</description>
        <label>Consolidate as VMSR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__D10_Concomitant_Product_Null__c</fullName>
        <description>Used if no concomitant products were reported.</description>
        <label>D10 - Concomitant Product Null</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__D10_Date_Returned_to_Mfg_Null__c</fullName>
        <description>Used if the date of device return is not being provided in the report or if the device was not returned to the manufacturer.</description>
        <label>D10 - Date Returned to Mfg Null</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__D10_Date_returned_to_MFG__c</fullName>
        <description>Date that the manufacturer received the affected device.</description>
        <label>D10 - Date returned to Mfg</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__D10_Device_available_for_Eval__c</fullName>
        <description>Indicates if the affected device is available for evaluation by the manufacturer.</description>
        <label>D10 - Device available for Eval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__D11_Concomitant_Null__c</fullName>
        <description>Used if no concomitant products were reported.</description>
        <label>D11 - Concomitant Product Null</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__D1_Brand_Name__c</fullName>
        <description>Marketed product name.</description>
        <label>D1 - Brand Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__D2_Common_Device_Name__c</fullName>
        <description>Generic category of a device.</description>
        <label>D2 - Common Device Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__D2b_Procode__c</fullName>
        <description>3 character code assigned to a device based on the medical device product classification.</description>
        <label>D2b - Procode</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__D3_Address2__c</fullName>
        <description>Manufacturer address, line 2.</description>
        <label>D3 - Address 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__D3_Address__c</fullName>
        <description>Manufacturer address, line 1.</description>
        <label>D3 - Address 1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__D3_City__c</fullName>
        <description>Manufacturer city.</description>
        <label>D3 - City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__D3_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Manufacturer country.</description>
        <label>D3 - Country</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CMPL123CME__Complaint_Code__c.CMPL123CME__Type__c</field>
                <operation>equals</operation>
                <value>COUNTRY CODE</value>
            </filterItems>
            <filterItems>
                <field>CMPL123CME__Complaint_Code__c.CMPL123CME__Inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>Search/Select Country Code only</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>CMPL123CME__Complaint_Code__c</referenceTo>
        <relationshipLabel>EMDR (D3 - Country)</relationshipLabel>
        <relationshipName>EMDR2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__D3_Email_Null__c</fullName>
        <description>Used if manufacturer email is not being provided in the report.</description>
        <label>D3 - Email Null</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__D3_Email__c</fullName>
        <description>Manufacturer email.</description>
        <label>D3 - Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__D3_Fax_Number_Null__c</fullName>
        <description>Used if the manufacturer fax number is not being provided in the report.</description>
        <label>D3 - Fax Number Null</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__D3_Fax_Number__c</fullName>
        <description>Manufacturer fax number.</description>
        <label>D3 - Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__D3_Name__c</fullName>
        <description>Manufacturer name.</description>
        <label>D3 - Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__D3_Phone_Number_Null__c</fullName>
        <description>Used if the manufacturer phone number is not being provided in the report.</description>
        <label>D3 - Phone Number Null</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__D3_Phone_Number__c</fullName>
        <description>Manufacturer phone number.</description>
        <label>D3 - Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__D3_Postal_Code__c</fullName>
        <description>Manufacturer postal code ouside USA.</description>
        <label>D3 - Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__D3_Region_State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Manufacturer state within USA.</description>
        <label>D3 - Region State</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CMPL123CME__Complaint_Code__c.CMPL123CME__Type__c</field>
                <operation>equals</operation>
                <value>STATE CODE</value>
            </filterItems>
            <filterItems>
                <field>CMPL123CME__Complaint_Code__c.CMPL123CME__Inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>Search/Select State Code only</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>CMPL123CME__Complaint_Code__c</referenceTo>
        <relationshipLabel>EMDR (D3 - Region State)</relationshipLabel>
        <relationshipName>EMDR3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__D3_Zip_Code_Ext__c</fullName>
        <description>Manufacturer zip code within USA.</description>
        <label>D3 - Zip Code Extension</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__D3_Zip_Code__c</fullName>
        <description>Manufacturer zip code within USA.</description>
        <label>D3 - Zip Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__D4_Catalog_No__c</fullName>
        <description>Exact number as it appears in the manufacturer's catalog, device labeling, or accompanying packaging.</description>
        <label>D4 - Catalog No</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__D4_Expiration_Date_Null__c</fullName>
        <description>Used if the expiration date is not being provided in the report or no expiration date exists.</description>
        <label>D4 - Expiration Date Null</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__D4_Expiration_Date__c</fullName>
        <description>Labeled device expiration date.</description>
        <label>D4 - Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__D4_Lot_No__c</fullName>
        <description>Device lot number which can be found on device label or accompanying packaging.</description>
        <label>D4 - Lot No</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__D4_Model_No__c</fullName>
        <description>Exact model number found on the device label or accompanying packaging.</description>
        <label>D4 - Model No</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__D4_Other_No__c</fullName>
        <description>Any other device identification number.</description>
        <label>D4 - Other #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__D4_Serial_No__c</fullName>
        <description>Number assigned by the manufacturer specific to individual device which can be found on the device label or accompanying packaging.</description>
        <label>D4 - Serial No</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__D5_Operator_of_Device__c</fullName>
        <description>Type of person operating/using the device on the patient at the time of the event.</description>
        <label>D5 - Operator of Device</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attorney</fullName>
                </value>
                <value>
                    <fullName>Audiologist</fullName>
                </value>
                <value>
                    <fullName>Biomedical Engineer</fullName>
                </value>
                <value>
                    <fullName>Dental Assistant</fullName>
                </value>
                <value>
                    <fullName>Dental Hygienist</fullName>
                </value>
                <value>
                    <fullName>Dentist</fullName>
                </value>
                <value>
                    <fullName>Device Unattended</fullName>
                </value>
                <value>
                    <fullName>Dietician</fullName>
                </value>
                <value>
                    <fullName>Emergency Medical Technician</fullName>
                </value>
                <value>
                    <fullName>Health Professional</fullName>
                </value>
                <value>
                    <fullName>Home Health Aide</fullName>
                </value>
                <value>
                    <fullName>Hospital Service Technician</fullName>
                </value>
                <value>
                    <fullName>Lay User/Patient</fullName>
                </value>
                <value>
                    <fullName>Medical Assistant</fullName>
                </value>
                <value>
                    <fullName>Medical Equip Company Techn/Rep</fullName>
                </value>
                <value>
                    <fullName>Medical Technologist</fullName>
                </value>
                <value>
                    <fullName>Nuclear Medicine Technologist</fullName>
                </value>
                <value>
                    <fullName>Nurse</fullName>
                </value>
                <value>
                    <fullName>Nursing Assistant</fullName>
                </value>
                <value>
                    <fullName>Occupational Therapist</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Other Caregivers</fullName>
                </value>
                <value>
                    <fullName>Other Health Care Professional</fullName>
                </value>
                <value>
                    <fullName>Paramedic</fullName>
                </value>
                <value>
                    <fullName>Patient</fullName>
                </value>
                <value>
                    <fullName>Patient Family Member/Friend</fullName>
                </value>
                <value>
                    <fullName>Personal Care Assistant</fullName>
                </value>
                <value>
                    <fullName>Pharmacist</fullName>
                </value>
                <value>
                    <fullName>Phlebotomist</fullName>
                </value>
                <value>
                    <fullName>Physical Therapist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__D5_Other_operator_of_Device__c</fullName>
        <description>To be completed if "Other" is selected.</description>
        <label>D5 - Other Operator of Device</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__D6_Implant_Date_Null__c</fullName>
        <description>Used if the Implant Date is not being provided in the report or the device is not implantable.</description>
        <label>D6 - Implant Date Null</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__D6_Implant_Date__c</fullName>
        <description>Date of implantation of the device.</description>
        <label>D6 - Implant Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__D6a_Implant_Date_Null__c</fullName>
        <description>Used if the Implant Date is not being provided in the report or the device is not implantable.</description>
        <label>D6a - Implant Date Null</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__D6a_Implant_Date__c</fullName>
        <description>Date of implantation of the device.</description>
        <label>D6a - Implant Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__D6b_Explant_Date_Null__c</fullName>
        <description>Used if the Explant Date is not being provided in the report or the device is not implantable.</description>
        <label>D6b - Explant Date Null</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__D6b_Explant_Date__c</fullName>
        <description>Date of explantation of the device.</description>
        <label>D6b - Explant Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__D7_Explant_Date_Null__c</fullName>
        <description>Used if the Explant Date is not being provided in the report or the device is not implantable.</description>
        <label>D7 - Explant Date Null</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__D7_Explant_Date__c</fullName>
        <description>Date of explantation of the device.</description>
        <label>D7 - Explant Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__D7a_Single_Use_Device__c</fullName>
        <description>Used if a device labeled for single-use only was reprocessed and reused on a patient.</description>
        <label>D7a - Single Use Device</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__D7b_Address_1__c</fullName>
        <description>Reprocessor address line 1.</description>
        <label>D7b - Address 1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__D7b_Address_2__c</fullName>
        <description>Reprocessor address line 2.</description>
        <label>D7b - Address 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__D7b_City__c</fullName>
        <description>Reprocessor city.</description>
        <label>D7b - City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__D7b_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reprocessor country.</description>
        <label>D7b - Country</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CMPL123CME__Complaint_Code__c.CMPL123CME__Type__c</field>
                <operation>equals</operation>
                <value>COUNTRY CODE</value>
            </filterItems>
            <filterItems>
                <field>CMPL123CME__Complaint_Code__c.CMPL123CME__Inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>Search/Select Country Code only</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>CMPL123CME__Complaint_Code__c</referenceTo>
        <relationshipLabel>EMDR (D7b - Country)</relationshipLabel>
        <relationshipName>EMDR1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__D7b_E_mail_Null__c</fullName>
        <description>Used if reprocessor e-mail is not being provided in the report.</description>
        <label>D7b - E-mail Null</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__D7b_E_mail__c</fullName>
        <description>Reprocessor e-mail.</description>
        <label>D7b - E-mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__D7b_Fax_Number_Null__c</fullName>
        <description>Used if reprocessor fax number is not being provided in the report.</description>
        <label>D7b - Fax Number Null</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__D7b_Fax_Number__c</fullName>
        <description>Reprocessor fax number.</description>
        <label>D7b - Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__D7b_Name__c</fullName>
        <description>Reprocessor name.</description>
        <label>D7b - Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__D7b_Postal_Code__c</fullName>
        <description>Reprocessor postal code outside USA.</description>
        <label>D7b - Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__D7b_Region_State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reprocessor state within USA.</description>
        <label>D7b - Region State</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CMPL123CME__Complaint_Code__c.CMPL123CME__Type__c</field>
                <operation>equals</operation>
                <value>STATE CODE</value>
            </filterItems>
            <filterItems>
                <field>CMPL123CME__Complaint_Code__c.CMPL123CME__Inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>Search/Select State Code only</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>CMPL123CME__Complaint_Code__c</referenceTo>
        <relationshipLabel>EMDR (D7b - Region State)</relationshipLabel>
        <relationshipName>EMDR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__D7b_Zip_Code_Extension__c</fullName>
        <description>Reprocessor zip code extension within USA.</description>
        <label>D7b - Zip Code Extension</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__D7b_Zip_Code__c</fullName>
        <description>Reprocessor zip code within USA.</description>
        <label>D7b - Zip Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__D8_Single_Use_Device_Null__c</fullName>
        <description>Used if the device is not labeled for single-use only and was not reprocessed and reused on a patient.</description>
        <label>D8 - Single Use Device Null</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__D8_Single_Use_Device__c</fullName>
        <description>Used if a device labeled for single-use only was reprocessed and reused on a patient.</description>
        <label>D8 - Single Use Device</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__D8_Was_device_serviced_by_third_party__c</fullName>
        <label>D8 - Was device serviced by third party?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__D9_Address2__c</fullName>
        <description>Reprocessor address line 2.</description>
        <label>D9 - Address 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__D9_City__c</fullName>
        <description>Reprocessor city.</description>
        <label>D9 - City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__D9_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reprocessor country.</description>
        <label>D9 - Country</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CMPL123CME__Complaint_Code__c.CMPL123CME__Type__c</field>
                <operation>equals</operation>
                <value>COUNTRY CODE</value>
            </filterItems>
            <filterItems>
                <field>CMPL123CME__Complaint_Code__c.CMPL123CME__Inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>Search/Select Country Code only</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>CMPL123CME__Complaint_Code__c</referenceTo>
        <relationshipLabel>EMDR (D9 - Country)</relationshipLabel>
        <relationshipName>EMDR4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__D9_Date_Returned_to_Mfg_Null__c</fullName>
        <description>Used if the date of device return is not being provided in the report or if the device was not returned to the manufacturer.</description>
        <label>D9 - Date Returned to Mfg Null</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__D9_Date_returned_to_Mfg__c</fullName>
        <description>Date that the manufacturer received the affected device.</description>
        <label>D9 - Date Returned to Mfg</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__D9_Device_available_for_Eval__c</fullName>
        <description>Indicates if the affected device is available for evaluation by the manufacturer.</description>
        <label>D9 - Device Available for Eval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__D9_E_mail_Null__c</fullName>
        <description>Used if reprocessor e-mail is not being provided in the report.</description>
        <label>D9 - E-mail Null</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__D9_E_mail__c</fullName>
        <description>Reprocessor e-mail.</description>
        <label>D9 - E-mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__D9_Fax_Number_Null__c</fullName>
        <description>Used if reprocessor fax number is not being provided in the report.</description>
        <label>D9 - Fax Number Null</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__D9_Fax_Number__c</fullName>
        <description>Reprocessor fax number.</description>
        <label>D9 - Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__D9_Name__c</fullName>
        <description>Reprocessor name.</description>
        <label>D9 - Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__D9_Postal_Code__c</fullName>
        <description>Reprocessor postal code outside USA.</description>
        <label>D9 - Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
</CustomObject>